feat: add currency exchange rates
